--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="홍길동" />
   <meta http-equiv="Content-Language" content="ko" />
   <link rel="canonical" href="https://yourname.github.io/" />
+  <meta name="google-adsense-account" content="ca-pub-9877147506968595">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
