--- a/index.html
+++ b/index.html
@@ -274,4 +274,9 @@
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
+  <footer>
+  © 2025 Random Team Maker · 
+  <a href="/privacy.html">개인정보처리방침</a> · 
+  <a href="/terms.html">이용약관</a>
+</footer>
 </html>
